Fixed an issue where the highlight would cut off in mobile view for the highlighted line in a code block (with Shiki) before the line end due to the w-full targeting the full width of the visible area and not taking into account the full scrollable width of the content

--- a/src/styles/shiki.css
+++ b/src/styles/shiki.css
@@ -27,7 +27,7 @@ html.dark .astro-code span {
    rather than just the text. */
 .astro-code .line.highlighted,
 .astro-code .line.diff {
-  @apply inline-block w-full;
+  @apply inline-block min-w-full;
 }
 
 /* [!code highlight] or multiple lines below with [!code highlight:3] */
